# kali-mobile-gui

./: .eslintrc.js  .gitignore  .prettierignore  App.js  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SETUP.md  app.json  install.sh  kali-bridge.py  package-lock.json  package.json  setup.ps1  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  stale.yml
android/: build.gradle  gradle.properties  gradlew  gradlew.bat  local.properties.example  settings.gradle
android/app/: CMakeLists.txt  build.gradle  debug.keystore  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/kaligui/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: colors.xml  rn_compatibility.xml  strings.xml  styles.xml
android/app/src/main/res/xml/: network_security_config.xml
bridge/: Dockerfile  README.md  docker-compose.yml  kali-bridge.py
src/components/: CategoryCard.js  ConnectionBadge.js  FlagItem.js  TerminalView.js
src/config/: default.js  default.ts
src/context/: AppContext.js  AppContext.tsx
src/data/: categories.js  index.js  known-tools.ts  tools-exploitation.js  tools-forensics.js  tools-passwords.js  tools-postexploit.js  tools-recon.js  tools-reverse.js  tools-sniffing.js  tools-social.js  tools-vuln.js  tools-web.js  tools-wireless.js
src/screens/: AIAssistantScreen.js  AboutScreen.js  AddToolScreen.js  CategoryScreen.js  DashboardScreen.js  HistoryScreen.js  SettingsScreen.js  SplashScreen.js  (+5 more)
(+6 files in other folders)
